--- a/web_interface/package.json
+++ b/web_interface/package.json
@@ -13,14 +13,17 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.34",
     "antd": "^5.13.2",
+    "i18next": "^23.7.18",
     "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
